--- a/test.css
+++ b/test.css
@@ -1,6 +1,9 @@
-body{ 
-  color :rgb(255, 255, 0)
- }
+body { 
+  color: rgb(255, 255, 0);
+}
 
-section ,title. ui +font{position:absolute }
+section,
+title.ui + font{
+  position: absolute;
+}
 
