--- a/test.css
+++ b/test.css
@@ -1,9 +1,8 @@
-body { 
+body {
   color: rgb(255, 255, 0);
 }
 
-section,
-title.ui + font{
+section, title.ui + font {
   position: absolute;
 }
 
